k8s-resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analyzer
spec:
  replicas: 3
  selector:
    matchLabels:
      app: analyzer
  template:
    metadata:
      labels:
        app: analyzer
    spec:
      containers:
      - name: analyzer
        image: anasaz04/analyzer:latest
        ports:
        - containerPort: 8000
