k8s-resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: analyzer-service
spec:
  selector:
    app: analyzer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
